k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nodejs
  labels:
    service: nodejs
spec:
  selector:
    app: nodejs
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
